add back size property on /api/v1/stats
